# Trading-Engine

./: .gitignore  CMakeLists.txt  README.md
components/data_saver/: prepare_data.py
components/engine/: CMakeLists.txt
components/engine/include/execution/: BacktestExecutionHandler.h
components/engine/include/interfaces/: IExecutionHandler.h  IRiskManager.h  ISignalSource.h
components/engine/include/risk/: PortfolioRiskManager.h
components/engine/src/: EventLoop.cpp  main.cpp
components/engine/src/execution/: BacktestExecutionHandler.cpp
components/rust_data_fetcher/: Cargo.toml
components/rust_data_fetcher/src/: main.rs
config/: api.json  asset.json  output_data_location.json
include/: EventLoop.h
include/core/: DataBar.h  Portfolio.h  SignalPacket.h  TradeOrder.h
include/data/: BinFileReader.h
include/interfaces/: IDataProvider.h  IExecutionHandler.h  IRiskManager.h  ISignalSource.h
include/risk/: PortfolioRiskManager.h
include/signals/: AggregatedIPCSource.h
rust_data_fetcher/src/: main.rs
rust_data_pipeline/: Cargo.toml
rust_data_pipeline/src/: lib.rs
src/: main.cpp
src/core/: DataBar.h  Portfolio.cpp  SignalPacket.h  TradeOrder.h
src/data/: BinFileReader.cpp
src/risk/: PortfolioRiskManager.cpp
src/signals/: AggregatedIPCSource.cpp
