[package]
name = "rust_data_pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_data_pipeline"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }

tokio = {version = "1.47.1", features = ["full"]}
reqwest = {version = "0.12", features = ["json"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.142"

bincode = "2.0.1"