[package]
name = "data_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.45", features = ["derive"] }
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
